@@ -74,14 +74,109 @@ To set up and run this project locally, follow the steps below:
   - `books.txt`: A file containing all book records.
   - `users.txt`: A file containing user accounts and their borrowed books.
 
-#### **Contributors**
-- **Timi_Bee**: Project creator and lead developer.
 
 #### **Future Enhancements**
 - **Graphical User Interface (GUI)**: A future iteration could include a GUI for better user interaction using JavaFX or Swing.
 - **Database Integration**: Instead of text files, the system could integrate a database MySQL, SQLite) for more scalable data management.
 - **Online Access**: Convert the application into a web-based system using technologies such as Spring Boot for back-end and React for front-end.
 
+
+
+### 📘 `README.md`
+
+```markdown
+# 📚 Library Management System
+
+A Java-based Library Management System developed using JavaFX and JDBC. This project provides an interactive user interface for managing books, borrowers, and transactions in a typical library setting. It's suitable for academic practice or small-scale library operations.
+
+---
+
+## 🚀 Features
+
+- 📖 **Add, View, Edit, and Delete Books**
+- 👤 **Register and Manage Library Users**
+- 🔄 **Issue and Return Books**
+- 🗃️ **Track Borrowing History**
+- 📊 **Display Book Availability Status**
+- 💾 **MySQL or SQLite Database Integration**
+- 🎨 **JavaFX UI with Scene Builder (FXML)**
+
+---
+
+## 🛠️ Built With
+
+- **Java 17/24** – Core language
+- **JavaFX 17.0.6** – GUI framework
+- **JDBC** – Database connectivity
+- **IntelliJ IDEA** – Development environment
+- **Maven** – Dependency management
+
+---
+
+## 📂 Project Structure
+
+```
+📦LibraryManagementSystem
+ ┣ 📁src
+ ┃ ┣ 📁com.library
+ ┃ ┃ ┣ 📜LibraryManagementSystem.java  // Main class
+ ┃ ┃ ┣ 📁controllers
+ ┃ ┃ ┣ 📁models
+ ┃ ┃ ┗ 📁utils
+ ┣ 📁resources
+ ┃ ┣ 📄fxml files
+ ┃ ┣ 📄css
+ ┃ ┗ 📄images
+ ┣ 📄pom.xml
+```
+
+---
+
+## 🧪 Getting Started
+
+### ✅ Prerequisites
+
+- Java JDK 17 or higher (`--enable-preview` enabled for JDK 24)
+- Maven
+- IntelliJ IDEA or Eclipse
+- MySQL (or update for SQLite)
+
+### ⚙️ Setup
+
+1. **Clone the repository**:
+   ```bash
+   git clone https://github.com/your-username/library-management-system.git
+   ```
+
+2. **Open in IntelliJ IDEA**:
+   - File > Open > Select `pom.xml`
+
+3. **Run the Main Class**:
+   - Locate `LibraryManagementSystem.java` or your main class.
+   - Right-click > Run.
+
+4. **Ensure Database Connection**:
+   - Check your `DBConnection.java` file in `com.library.utils` and update the credentials.
+
+---
+
+## 🧑‍💻 Author
+
+**Timi_Bee**  
+💼 Software Developer | Data Scientist | Java Enthusiast  
+📧 [akomoledebusayotimi@gmail.com]  
+
+
+---
+
+## 🌟 Acknowledgements
+
+- OpenJFX for JavaFX libraries
+- JetBrains IntelliJ IDEA
+- Scene Builder by GluonHQ
+```
+
+---
 
 
 ---
